cmake_minimum_required(VERSION 3.8)
project(deva_gaode_routing_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)
find_package(deva_common_msgs REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
    "msg/AdasisMap.msg"
    "msg/CameraCallbackInfo.msg"
    "msg/CameraInfo.msg"
    "msg/CenterPoint.msg"
    "msg/Coordinate.msg"
    "msg/CrossPoint.msg"
    "msg/EhpMetaData.msg"
    "msg/EhpPosition.msg"
    "msg/EhpProfileLong.msg"
    "msg/EhpProfileShort.msg"
    "msg/EhpSegment.msg"
    "msg/EhpStub.msg"
    "msg/FeatureIDType.msg"
    "msg/FeaturePoint.msg"
    "msg/FeaturePointById.msg"
    "msg/GlobalPathMsg.msg"
    "msg/GlobalRouting.msg"
    "msg/Guidance.msg"
    "msg/HA.msg"
    "msg/HeterogeneousMatchLink.msg"
    "msg/IntersectionRoad.msg"
    "msg/IntersectionRoadNode.msg"
    "msg/J6mData.msg"
    "msg/J6mIntersection.msg"
    "msg/J6mIntersectionEntryInfo.msg"
    "msg/J6mLane.msg"
    "msg/J6mLaneMarking.msg"
    "msg/J6mLink.msg"
    "msg/J6mRoadObject.msg"
    "msg/KLaneMetaInfo.msg"
    "msg/KLsl.msg"
    "msg/KWarningSign.msg"
    "msg/LANE.msg"
    "msg/LaneById.msg"
    "msg/LaneCond.msg"
    "msg/LaneGroupIDType.msg"
    "msg/LaneRestriction.msg"
    "msg/LaneTopo.msg"
    "msg/LaneTrafficInfo.msg"
    "msg/Link.msg"
    "msg/LinkAttribute.msg"
    "msg/LinkCurvature.msg"
    "msg/LinkIDType.msg"
    "msg/NavRoute.msg"
    "msg/Node.msg"
    "msg/NodeIDType.msg"
    "msg/PositionMatchLink.msg"
    "msg/RGAdditionalLaneInfo.msg"
    "msg/RGIntersectionResult.msg"
    "msg/RGLaneInfoResult.msg"
    "msg/RGRedLightResult.msg"
    "msg/RGVTipsPointResult.msg"
    "msg/Restriction.msg"
    "msg/RestrictionDetail.msg"
    "msg/Route.msg"
    "msg/RouteGuide.msg"
    "msg/RouteGuideResponse.msg"
    "msg/RoutePos.msg"
    "msg/RoutingNavPath.msg"
    "msg/SDCross.msg"
    "msg/SDNode.msg"
    "msg/SdProLane.msg"
    "msg/SdProLaneConnect.msg"
    "msg/SdProLaneTopo.msg"
    "msg/SdProLink.msg"
    "msg/SdProMap.msg"
    "msg/SdProPath.msg"
    "msg/SdProPathMerge.msg"
    "msg/SdProPathSplit.msg"
    "msg/SdProRoad.msg"
    "msg/SdProSplitList.msg"
    "msg/SolidLine.msg"
    "msg/StopLine.msg"
    "msg/Topology.msg"
    "msg/TrfcSign.msg"
    "msg/WebCallBack.msg"
    "msg/WebCrossImage.msg"
    "msg/WebCrossNaviInfo.msg"
    "msg/WebIntersection.msg"
    "msg/WebLane.msg"
    "msg/WebLightInfo.msg"
    "msg/WebLightState.msg"
    "msg/WebLocParallelRoad.msg"
    "msg/WebNotAvoidInfo.msg"
    "msg/WebParallelRoad.msg"
    "msg/WebPoint.msg"
    "msg/WebRoad.msg"
    "msg/WebStep.msg"
    "msg/WebTrafficLight.msg"
    "msg/WebVocalRecMsg.msg"


  DEPENDENCIES deva_common_msgs rosidl_default_generators std_msgs
)

ament_package()
