cmake_minimum_required(VERSION 3.8)
project(deva_perception_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(builtin_interfaces REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(deva_common_msgs REQUIRED)
find_package(deva_localization_msgs REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
    "msg/AEBObstacle.msg"
    "msg/AEBObstacleArray.msg"
    "msg/AdbEnv.msg"
    "msg/AdbTrafficSign.msg"
    "msg/Area.msg"
    "msg/AssociatedInfo.msg"
    "msg/BezierCtrPoint.msg"
    "msg/BezierCtrPoints.msg"
    "msg/BindResult.msg"
    "msg/BroadCategory.msg"
    "msg/Calibration.msg"
    "msg/CenterLine.msg"
    "msg/Channel.msg"
    "msg/ChannelArray.msg"
    "msg/Cone.msg"
    "msg/ConeArray.msg"
    "msg/Crosswalk.msg"
    "msg/Crosswalk2d.msg"
    "msg/Crosswalk2dArray.msg"
    "msg/CurveCoef.msg"
    "msg/DictInfo.msg"
    "msg/DynamicObstWorldSpaceInfo.msg"
    "msg/DynamicObstacle.msg"
    "msg/DynamicObstacleList.msg"
    "msg/E2eAdb.msg"
    "msg/E2eAdbArray.msg"
    "msg/E2eAdbTrafficSign.msg"
    "msg/E2eCategory.msg"
    "msg/E2eDecodeBroadResult.msg"
    "msg/E2eDecodeResult.msg"
    "msg/E2eFailsafe.msg"
    "msg/E2eFailsafeArray.msg"
    "msg/E2eResult.msg"
    "msg/E2eTrafficDetPair.msg"
    "msg/Edge.msg"
    "msg/EdgeDisperseCurve.msg"
    "msg/EdgeEquationCurve.msg"
    "msg/EdgeLineSegment.msg"
    "msg/Entrance.msg"
    "msg/EntranceArray.msg"
    "msg/ExtraInfo.msg"
    "msg/FixedObstacle.msg"
    "msg/FixedObstacleList.msg"
    "msg/ForkPoint.msg"
    "msg/FreespaceArray.msg"
    "msg/FreespaceMatrix.msg"
    "msg/FreespacePoint.msg"
    "msg/GodObstacle.msg"
    "msg/GodResult.msg"
    "msg/IPMImage.msg"
    "msg/ImageRadarPacket.msg"
    "msg/Images4vMsg.msg"
    "msg/Lane.msg"
    "msg/LaneAction.msg"
    "msg/LaneArray.msg"
    "msg/LaneArrayv2.msg"
    "msg/LaneInfo.msg"
    "msg/LaneLine2d.msg"
    "msg/LaneLine2dArray.msg"
    "msg/LanePropertySegment.msg"
    "msg/LaneType.msg"
    "msg/Lanev2.msg"
    "msg/Lit.msg"
    "msg/MovingObstacle.msg"
    "msg/MutableObstacle.msg"
    "msg/NearestParkingSlot.msg"
    "msg/NoparkingZone.msg"
    "msg/OCCVisualization.msg"
    "msg/Obstacle.msg"
    "msg/ObstacleArray.msg"
    "msg/ObstacleCommon.msg"
    "msg/ObstacleTimestamp.msg"
    "msg/PartitionZone.msg"
    "msg/PerceptCenterLine.msg"
    "msg/PerceptionResult.msg"
    "msg/PilotObstacleArray.msg"
    "msg/PoPFusionTFLNOA.msg"
    "msg/PoPTFLNOA.msg"
    "msg/Polygon.msg"
    "msg/QuadrangleImg.msg"
    "msg/QuadrangleVcs.msg"
    "msg/RVADB.msg"
    "msg/RVDynObstacle.msg"
    "msg/RVDynObstacleList.msg"
    "msg/RVDynObstacleResult.msg"
    "msg/RVDynamicObstacle.msg"
    "msg/RVDynamicObstacleArray.msg"
    "msg/RVLight.msg"
    "msg/RVLightList.msg"
    "msg/RVObstacle.msg"
    "msg/RVObstacleArray.msg"
    "msg/RVResult.msg"
    "msg/RadarObject.msg"
    "msg/RadarObjectArray.msg"
    "msg/RadarObjectInfo.msg"
    "msg/RadarObjectMessage.msg"
    "msg/RadarStatus.msg"
    "msg/RadarVehicleInfo.msg"
    "msg/RadarVehicleInfoArray.msg"
    "msg/RoadClass.msg"
    "msg/RoadInfo.msg"
    "msg/RoadType.msg"
    "msg/RvLaneResult.msg"
    "msg/RvStaticObstacle.msg"
    "msg/RvStaticObstacleArray.msg"
    "msg/SFFusionTFLListNOA.msg"
    "msg/SFFusionTFLNOA.msg"
    "msg/SFFusionTSListNOA.msg"
    "msg/SFFusionTSNOA.msg"
    "msg/STBoundary.msg"
    "msg/Signal.msg"
    "msg/StaticObstacle.msg"
    "msg/SteeringArrow.msg"
    "msg/StopLine2d.msg"
    "msg/StopLine2dArray.msg"
    "msg/SubclassificationType.msg"
    "msg/TrafficChannel.msg"
    "msg/TrafficChannelArray.msg"
    "msg/TrafficDetectData.msg"
    "msg/TrafficE2eResult.msg"
    "msg/TrafficE2eStablePair.msg"
    "msg/TrafficLight.msg"
    "msg/TrafficLightArray.msg"
    "msg/TrafficLightArrayNew.msg"
    "msg/TrafficLightNew.msg"
    "msg/TrafficObject.msg"
    "msg/TrafficPole.msg"
    "msg/TrafficPoleArray.msg"
    "msg/TrafficRegion.msg"
    "msg/TrafficRount.msg"
    "msg/TrafficStatus.msg"
    "msg/USTBoundary.msg"
    "msg/UltrasonicRadar.msg"
    "msg/UltrasonicRadarArray.msg"
    "msg/VirtualCamInfo.msg"
    "msg/VirtualCams.msg"
    "msg/WayLink.msg"


  DEPENDENCIES deva_common_msgs deva_localization_msgs builtin_interfaces geometry_msgs sensor_msgs std_msgs
)

ament_package()
